--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,8 +10,8 @@ Key:
 Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
  + Added several permission nodes to give individual users special perks (Double/Triple/Quadruple XP)
- + Added reduced cooldown permission nodes as donor perks (1/4, 1/3, 1/2 cooldown)
- + Added increased activation time permissions nodes as donor perks (+4, +8, and +12 seconds)
+ + Added reduced cooldown permission nodes as special perks (1/4, 1/3, 1/2 cooldown)
+ + Added increased activation time permissions nodes as special perks (+4, +8, and +12 seconds)
  + Added API for plugins to add custom tools directly via Spout - repair / abilities do not work ATM
  + Added offline party members to the list displayed by /party
  + Added possibility to kick offline members from parties
@@ -22,10 +22,10 @@ Version 1.3.09
  = Fixed Archery PVE disablement not working properly
  = Fixed possible NPE when a projectile is shot by a dispenser or doesn't have any shooter
  = Fixed issue with NoCheatPlus and Serrated Strikes / Skull Splitter (fight.noswing)
- = Fixed very small possible memory leak concerning Archery
+ = Fixed tiny memory leak concerning Archery
  = Fixed bug where you could receive Archery XP from Potions
  = Fixed bug where Chunklets for the < 64 y coordinates would not be properly loaded
- = Fixed bug with duping blocks via piston pushing
+ = Fixed exploit with block duplication via piston pushing
  = Fixed bug with falling sand/gravel not being tracked
  = Fixed bug with Tree Feller not working with custom axes
  = Fixed bug with locale strings when trying to teleport to a non-existent player
@@ -35,8 +35,8 @@ Version 1.3.09
  = Fixed bug with Chunklets not being reloaded on /reload
  = Fixed possible NPE when falling with no item in hand
  ! API methods can now only be used in a static way
- ! Arrows shot from a bow having the Infitity enchantment can no longer be retrieved
- ! Arrows that aren't shot by an entity are now dodgeable (currently only from dispensers)
+ ! Arrows shot from a bow having the Infinity enchantment can no longer be retrieved
+ ! Arrows that aren't shot by an entity are now able to be dodged (currently only from dispensers)
  ! Changed Spout settings to be in their own config file (spout.yml)
  ! Changed file format for parties (parties.yml), previous files are no longer used
  ! Changed mcMMO to inform on corrupt Chunklets and make new ones
