--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,9 @@ Key:
   ! Change
   - Removal
 
+Version 1.3.10-dev
+ +
+
 Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
  + Added several permission nodes to give individual users special perks (Double/Triple/Quadruple XP)
