--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,7 @@ Key:
   - Removal
 
 Version 1.3.10-dev
- +
+ = Fixed players never being removed from memory (memory leak)
 
 Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
