--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.3.10-dev
+ = Fixed admin chat being seen by everyone
  = Fixed players never being removed from memory (memory leak)
 
 Version 1.3.09
