--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,8 +8,10 @@ Key:
   - Removal
 
 Version 1.3.10-dev
- = Fixed admin chat being seen by everyone
+ + Added permission node for Iron Grip ability (mcmmo.ability.unarmed.irongrip)
+ + Added ability for custom blocks to drop a range of items.
  = Fixed players never being removed from memory (memory leak)
+ = Fixed admin chat being seen by everyone
 
 Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
