--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Key:
 Version 1.3.10-dev
  + Added permission node for Iron Grip ability (mcmmo.ability.unarmed.irongrip)
  + Added ability for custom blocks to drop a range of items.
+ + Added Ability API functions
  = Fixed players never being removed from memory (memory leak)
  = Fixed admin chat being seen by everyone
 
