--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.3.10-dev
  + Added permission node for Iron Grip ability (mcmmo.ability.unarmed.irongrip)
  + Added ability for custom blocks to drop a range of items.
  + Added Ability API functions
+ + Added 50% & 150% XP boost perks
  = Fixed players never being removed from memory (memory leak)
  = Fixed admin chat being seen by everyone
  = Fixed issue with UTFDataFormatException occurring on occasion when trying to load Chunklets
