--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ Version 1.3.10-dev
  = Fixed players never being removed from memory (memory leak)
  = Fixed admin chat being seen by everyone
  = Fixed issue with UTFDataFormatException occurring on occasion when trying to load Chunklets
+ = Fixed ArrayIndexOutOfBounds error caused when trying to use /xplock after logging in but before gaining XP
 
 Version 1.3.09
  + Added compatibility with AntiCheat (Which I highly recommend to prevent cheating)
