--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.3.10-dev
  + Added ability for custom blocks to drop a range of items.
  + Added Ability API functions
  + Added 50% & 150% XP boost perks
+ = Fixed Repair enchant downgrade not working
  = Fixed NPE caused by Spout players after a /reload
  = Fixed ConcurrentModificationException on world unload
  = Fixed players never being removed from memory (memory leak)
