--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ Version 1.3.10-dev
  + Added Ability API functions
  + Added 50% & 150% XP boost perks
  + Added "lucky" perk for donors
+ = Fixed duplication bug with sticky pistons
  = Fixed "GenericLabel belonging to mcMMO..." message
  = Fixed menu exit button not working
  = Fixed Repair enchant downgrade not working
