--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.3.10-dev
  = Fixed issue with UTFDataFormatException occurring on occasion when trying to load Chunklets
  = Fixed ArrayIndexOutOfBounds error caused when trying to use /xplock after logging in but before gaining XP
  = Fixed custom tools not properly respecting the Ability_Enabled flag.
+ = Fixed "lower tool" messages still being displayed even when ability messages are disabled.
  ! Optimized how player placed blocks are tracked
 
 Version 1.3.09
