--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ Version 1.3.10-dev
  = Fixed ArrayIndexOutOfBounds error caused when trying to use /xplock after logging in but before gaining XP
  = Fixed custom tools not properly respecting the Ability_Enabled flag.
  = Fixed "lower tool" messages still being displayed even when ability messages are disabled.
+ = Fixed custom blocks not dropping the proper item with Super Breaker when Silk Touch is used
  ! Optimized how player placed blocks are tracked
 
 Version 1.3.09
