--- a/Changelog.txt
+++ b/Changelog.txt
@@ -29,6 +29,7 @@ Version 1.3.10-dev
  = Fixed "lower tool" messages still being displayed even when ability messages are disabled.
  = Fixed custom blocks not dropping the proper item with Super Breaker when Silk Touch is used
  = Fixed custom woodcutting blocks throwing errors.
+ = Fixed possible ClassCastException from catching something other than a mob when using the Shake Mob skill
  ! Changed the format by which Chunklets are stored to be much smaller, and much faster to load
  ! Optimized how player placed blocks are tracked
 
