Add player command to reset skill levels

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -410,6 +410,9 @@ Commands.Party=<party-name> [[RED]]- Create/Join designated party
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Power Level [[YELLOW]]Leaderboard--
 Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
+Commands.Reset.All=[[GREEN]]All of your skill levels have been reset successfully.
+Commands.Reset.Single=[[GREEN]]Your {0} skill level has been reset successfully.
+Commands.Reset=[[RED]]Reset a skill's level to 0
 Commands.Skill.Invalid=[[RED]]That is not a valid skillname!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Leaderboard--
 Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
