--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,8 @@ Key:
   ! Change
   - Removal
 
-Version 1.3.10-dev
+Version 1.3.10
+ + Added 1.3.1 compatibility
  + Added permission node for Iron Grip ability (mcmmo.ability.unarmed.irongrip)
  + Added ability for custom blocks to drop a range of items.
  + Added Ability API functions
