--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,9 @@ Key:
   ! Change
   - Removal
 
+Version 1.3.11
+ = Fixed bug where mcMMO would ignore other block-protection plugins for various abilities
+ 
 Version 1.3.10
  + Added 1.3.1 compatibility
  + Added permission node for Iron Grip ability (mcmmo.ability.unarmed.irongrip)
