--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,8 @@ Key:
   - Removal
 
 Version 1.3.11
+ + Added compatibility with bow-wielding NPCs from Citizens/NPC mods
+ = Fixed bug where mcMMO could throw NPE errors if trees cut down were from a custom mod and had an id of 17
  = Fixed bug where mcMMO would ignore other block-protection plugins for various abilities
  
 Version 1.3.10
