--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,7 +11,7 @@ Version 1.3.11
  + Added compatibility with bow-wielding NPCs from Citizens/NPC mods
  + Added compatibility for pvp-prevention plugins for Serrated Strikes
  = Fixed bug where mcMMO could throw NPE errors if trees cut down were from a custom mod and had an id of 17
- = Fixed bug where mcMMO would ignore other block-protection plugins for various abilities
+ = Fixed dupe bug where mcMMO would ignore other block-protection plugins for various abilities
  
 Version 1.3.10
  + Added 1.3.1 compatibility
