--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.3.11
  + Added compatibility for pvp-prevention plugins for Serrated Strikes
  = Fixed bug where mcMMO could throw NPE errors if trees cut down were from a custom mod and had an id of 17
  = Fixed dupe bug where mcMMO would ignore other block-protection plugins for various abilities
+ = Fixed NPE with hardcore mode's vampirism
  
 Version 1.3.10
  + Added 1.3.1 compatibility
