Adding Fishermans Diet ability to fishing.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -77,12 +77,15 @@ Fishing.Ability.Info=[[RED]]Magiej\u00e4ger: [[GRAY]] **Verbessert sich mit Scha
 Fishing.Ability.Locked.0=Gesperrt bis Level 150+ (SHAKE)
 Fishing.Ability.Rank=[[RED]]Schatzj\u00e4ger Rang: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
+Fishing.Ability.FD=[[RED]]Fisherman''s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Schatzj\u00e4ger (Passiv)
 Fishing.Effect.1=Fish up misc. objects
 Fishing.Effect.2=Magiej\u00e4ger
 Fishing.Effect.3=Find Enchanted Items
 Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
+Fishing.Effect.6=Fisherman's Diet
+Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[AQUA]]Du hast einen Schatz gefunden!
 Fishing.Listener=Angeln:
