--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -103,12 +103,15 @@ Fishing.Ability.Info=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunt
 Fishing.Ability.Locked.0=LOCKED UNTIL 150+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]Treasure Hunter Rank: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}%
+Fishing.Ability.FD=[[RED]]Fisherman''s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Treasure Hunter (Passive)
 Fishing.Effect.1=Fish up misc. objects
 Fishing.Effect.2=Magic Hunter
 Fishing.Effect.3=Find Enchanted Items
 Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
+Fishing.Effect.6=Fisherman's Diet
+Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.Listener=Fishing: 
@@ -122,14 +125,14 @@ Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**GREEN THUMB FAIL**
-Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in stage {0}
+Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
 Herbalism.Ability.GTh=[[GREEN]]**GREEN THUMB**
 Herbalism.Ability.Lower=[[GRAY]]**YOU LOWER YOUR HOE**
 Herbalism.Ability.Ready=[[GREEN]]**YOU READY YOUR HOE**
 Herbalism.Effect.0=Green Terra (ABILITY)
 Herbalism.Effect.1=Spread the Terra, 3x Drops
 Herbalism.Effect.2=Green Thumb (Wheat)
-Herbalism.Effect.3=Auto-Plants wheat when harvesting
+Herbalism.Effect.3=Auto-Plants crops when harvesting
 Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick/Dirt)
 Herbalism.Effect.5=Make bricks mossy, or make grass grow
 Herbalism.Effect.6=Farmer's Diet
