--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -77,12 +77,15 @@ Fishing.Ability.Info=[[RED]]Cacciatore di Magia: [[GRAY]] **Migliora insieme al 
 Fishing.Ability.Locked.0=BLOCCATO FINO AD ABILITA\' 150+ (SCUOTERE)
 Fishing.Ability.Rank=[[RED]]Grado di Cacciatore di Tesori: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]Scuotere: [[YELLOW]]Strappa oggetti dai mob, mutilandoli durante il procedimento ;_;
+Fishing.Ability.FD=[[RED]]Fisherman''s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Cacciatore di Tesori (Passivo)
 Fishing.Effect.1=Ripesca oggetti vari
 Fishing.Effect.2=Cacciatore di Magia
 Fishing.Effect.3=Trova Oggetti Incantati
 Fishing.Effect.4=Scuotere (contro Entit\u00e0)
 Fishing.Effect.5=Scrolla oggetti di dosso ai mob con una canna da pesca
+Fishing.Effect.6=Fisherman's Diet
+Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]Possibilit\u00e0 di Cacciatore di Magia: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Hai trovato un tesoro!
 Fishing.Listener=Pesca:
