--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -77,12 +77,15 @@ Fishing.Ability.Info=[[RED]]\u9b54\u6cd5\u730e\u4eba: [[GRAY]] ** \u968f\u7740\u
 Fishing.Ability.Locked.0=\u6280\u80fd 150+ \u89e3\u9501 (\u6643\u52a8\u602a\u7269)
 Fishing.Ability.Rank=[[RED]]\u5b9d\u7269\u730e\u4eba\u7b49\u7ea7: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]\u6643\u52a8\u602a\u7269: [[YELLOW]]\u5411\u602a\u7269\u6325\u52a8\u9c7c\u7aff\u4f7f\u5b83\u4eec\u8eab\u4e0a\u7684\u7269\u54c1\u6389\u843d, \u540c\u65f6\u51cf\u5c11\u5b83\u4eec\u7684\u8840\u91cf ;_;
+Fishing.Ability.FD=[[RED]]Fisherman''s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=\u5b9d\u7269\u730e\u4eba (\u88ab\u52a8\u6280\u80fd)
 Fishing.Effect.1=\u9493\u5230\u6742\u7269
 Fishing.Effect.2=\u9b54\u6cd5\u730e\u4eba
 Fishing.Effect.3=\u627e\u5230\u9644\u9b54\u7269\u54c1
 Fishing.Effect.4=\u6643\u52a8\u602a\u7269 (\u5bf9\u602a\u7269\u4f7f\u7528)
 Fishing.Effect.5=\u7528\u9c7c\u7aff\u628a\u602a\u7269\u8eab\u4e0a\u7684\u4e1c\u897f\u6447\u4e0b\u6765
+Fishing.Effect.6=Fisherman's Diet
+Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]\u9b54\u6cd5\u730e\u4eba\u51e0\u7387: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]\u53d1\u73b0\u5b9d\u7269\u4e86\uff01
 Fishing.Listener=\u9493\u9c7c:
