--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -77,12 +77,15 @@ Fishing.Ability.Info=[[RED]]Cazador M\u00e1gico: [[GRAY]] **Mejora con Rango de 
 Fishing.Ability.Locked.0=BLOQUEADO HASTA HABILIDAD 150+ (SACUDIDA)
 Fishing.Ability.Rank=[[RED]]Cazador de Tesoros: [[YELLOW]]Rango {0}/5
 Fishing.Ability.Shake=[[RED]]Sacudida: [[YELLOW]]Arrancar items de monstruos, mutilandolos en el proceso.
+Fishing.Ability.FD=[[RED]]Fisherman''s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Cazador de Tesoros (Pasivo)
 Fishing.Effect.1=Pescar objetos miscel\u00e1neos
 Fishing.Effect.2=Cazador M\u00e1gico
 Fishing.Effect.3=Encuentra Objetos Encantados
 Fishing.Effect.4=Sacudir (contra Entidades)
 Fishing.Effect.5=Sacudir los items fuera de los monstruos con la ca\u00f1a de pescar
+Fishing.Effect.6=Fisherman's Diet
+Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]Probabilidad de Cazador M\u00e1gico: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
 Fishing.Listener=Pescador: 
