--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -77,12 +77,15 @@ Fishing.Ability.Info=[[RED]]P\u00eache magique : [[GRAY]] **S\'am\u00e9liore via
 Fishing.Ability.Locked.0=VERROUILL\u00c9 AVANT 150+ (Secousse)
 Fishing.Ability.Rank=[[RED]]Chasseur de tr\u00e9sors : [[YELLOW]] Rang {0}/5
 Fishing.Ability.Shake=[[RED]]Secousse : [[YELLOW]]Arrache des objets des monstres, les mutilant par la m\u00eame occasion ;_;
+Fishing.Ability.FD=[[RED]]Fisherman''s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Chasseur de tr\u00e9sors
 Fishing.Effect.1=Remonte des objets inhabituels
 Fishing.Effect.2=P\u00eache magique
 Fishing.Effect.3=Remonte des objets magiques
 Fishing.Effect.4=Secousse (sur monstres)
 Fishing.Effect.5=Fait tomber des objets des monstres avec une canne \u00e0 p\u00eache
+Fishing.Effect.6=Fisherman's Diet
+Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
 Fishing.Listener=P\u00eache :
