Displaying all perks upon login, and adding them to the locale files.

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -447,3 +447,11 @@ Stats.Header.Combat=[[GOLD]]-=KAMP EVNER=-
 Stats.Header.Gathering=[[GOLD]]-=INDSAMLINGS EVNER=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] F\u00e6rdigheder
+Perks.xp.name=Experience
+Perks.xp.desc=Receive {0}x XP.
+Perks.lucky.name=Luck
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.cooldowns.name=Fast Recovery
+Perks.cooldowns.desc=Cuts cooldown duration by {0}.
+Perks.activationtime.name=Endurance
+Perks.activationtime.desc=Increases ability activation time by {0} seconds.
