--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -448,3 +448,11 @@ Stats.Header.Combat=[[GOLD]]-=\u0411\u041e\u0415\u0412\u042b\u0415 \u041d\u0410\
 Stats.Header.Gathering=[[GOLD]]-=\u041d\u0410\u0412\u042b\u041a\u0418 \u0421\u0411\u041e\u0420\u0410=-
 Stats.Header.Misc=[[GOLD]]-=\u0420\u0410\u0417\u041d\u042b\u0415 \u041d\u0410\u0412\u042b\u041a\u0418=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430
+Perks.xp.name=Experience
+Perks.xp.desc=Receive {0}x XP.
+Perks.lucky.name=Luck
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.cooldowns.name=Fast Recovery
+Perks.cooldowns.desc=Cuts cooldown duration by {0}.
+Perks.activationtime.name=Endurance
+Perks.activationtime.desc=Increases ability activation time by {0} seconds.
