--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -447,3 +447,11 @@ Stats.Header.Combat=[[GOLD]]-=BOJOVE DOVEDNOSTI=-
 Stats.Header.Gathering=[[GOLD]]-=SHROMAZDOVACI DOVEDNOSTI=-
 Stats.Header.Misc=Ostatni schopnosti
 Stats.Own.Stats=[[GREEN]][mcMMO] Statistiky
+Perks.xp.name=Experience
+Perks.xp.desc=Receive {0}x XP.
+Perks.lucky.name=Luck
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.cooldowns.name=Fast Recovery
+Perks.cooldowns.desc=Cuts cooldown duration by {0}.
+Perks.activationtime.name=Endurance
+Perks.activationtime.desc=Increases ability activation time by {0} seconds.
