--- a/src/main/resources/locale/locale_no.properties
+++ b/src/main/resources/locale/locale_no.properties
@@ -448,3 +448,11 @@ Stats.Header.Combat=[[GOLD]]-=Kampferdigheter=-
 Stats.Header.Gathering=[[GOLD]]- = SAMLER FERDIGHETER = -
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
+Perks.xp.name=Experience
+Perks.xp.desc=Receive {0}x XP.
+Perks.lucky.name=Luck
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.cooldowns.name=Fast Recovery
+Perks.cooldowns.desc=Cuts cooldown duration by {0}.
+Perks.activationtime.name=Endurance
+Perks.activationtime.desc=Increases ability activation time by {0} seconds.
