--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -448,3 +448,11 @@ Stats.Header.Combat=[[GOLD]]-=\u683c\u6597\u6280\u80fd=-
 Stats.Header.Gathering=[[GOLD]]-=\u91c7\u96c6\u6280\u80fd=-
 Stats.Header.Misc=[[GOLD]]-=\u6742\u9879\u6280\u80fd=-
 Stats.Own.Stats=[[GREEN]][mcMMO] \u7edf\u8ba1\u4fe1\u606f
+Perks.xp.name=Experience
+Perks.xp.desc=Receive {0}x XP.
+Perks.lucky.name=Luck
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.cooldowns.name=Fast Recovery
+Perks.cooldowns.desc=Cuts cooldown duration by {0}.
+Perks.activationtime.name=Endurance
+Perks.activationtime.desc=Increases ability activation time by {0} seconds.
