--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.3.13
  + Added default cases to several switch/case statements
  ! GJ stopped being a lazy slacker and got stuff done
  - Removed dead code relating to null profiles
+ - Removed unused imports
 
 Version 1.3.12
  + Added Craftbukkit 1.4.5 compatibility
