--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,7 +9,8 @@ Key:
 
 Version 1.3.13
  + Added Craftbukkit 1.4.6 compatibility
- + Added default cases to several switch/case statements
+ = Fixed issue with missing default cases from several switch/case statements
+ = Fixed issue with Mining using actual skill level rather than max skill level
  ! GJ stopped being a lazy slacker and got stuff done
  - Removed dead code relating to null profiles
  - Removed unused imports
