--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.3.13
  + Added Craftbukkit 1.4.6 compatibility
  = Fixed issue with missing default cases from several switch/case statements
  = Fixed issue with Mining using actual skill level rather than max skill level
+ = Fixed some issues with static access
  ! GJ stopped being a lazy slacker and got stuff done
  - Removed dead code relating to null profiles
  - Removed unused imports
