--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ Version 1.3.13-dev
  = Fixed issue with Mining using actual skill level rather than max skill level
  = Fixed some issues with static access
  = Fixed ItemStack deprecation issues
+ = Fixed Async deprecation issues
  ! GJ stopped being a lazy slacker and got stuff done
  - Removed dead code relating to null profiles
  - Removed unused imports
