--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,8 @@ Version 1.3.13-dev
  = Fixed some issues with static access
  = Fixed ItemStack deprecation issues
  = Fixed Async deprecation issues
+ = Fixed some issues with mySQL databases (non-alphanumeric characters preventing MySQL)
+ = Fixed skill commands displaying .x% instead of 0.x%
  ! GJ stopped being a lazy slacker and got stuff done
  - Removed dead code relating to null profiles
  - Removed unused imports
